--- a/messenger/public/style.css
+++ b/messenger/public/style.css
@@ -116,10 +116,19 @@ body{
 .sign_in, .log_in{
   position: fixed;
   left: 50%;
-  top: 50%;
+  top: 40%;
   transform: translate(-50%, -50%);
   height: 60%;
   width: 96%;
+}
+.notmatch{
+  display: none;
+  font-family: 'Cairo', sans-serif;
+  position: fixed;
+  left: 50%;
+  top: 115%;
+  transform: translate(-50%, -50%);
+  color: #ed4337;
 }
 .sign_in input, .log_in input {
   font-family: 'Lalezar', cursive;
@@ -245,6 +254,7 @@ body{
   border-bottom-right-radius: 40px;
   background: inherit;
   overflow: hidden;
+  z-index: 4;
 }
 .group:before{
   content: '';
@@ -256,6 +266,71 @@ body{
   bottom: -45%;
   filter: blur(100px) contrast(.5) brightness(1.1);
   box-shadow: inset 0 0 0 200px rgb(255,255,255,0.3);
+}
+.search{
+  position: absolute;
+  height: 100%;
+  width: 30%;
+  left: 568px;
+  top: 60px;
+  border-radius: 50%;
+  background-color: white;
+  z-index: 8;
+  height: 2px;
+  width: 2px;
+  opacity: .6;
+  transition: all .5s  .1s cubic-bezier(1,-0.01,0.26,0.99);
+  z-index: 9;
+}
+.s_area{
+  display: none;
+  box-sizing: border-box;
+  background-color: none;
+  position: absolute;
+  height: 100%;
+  width: 30%;
+  left: 568px;
+  top: 60px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 85%;
+  width: 98%;
+  left: 50%;
+  top: 57%;
+  transform: translate(-50%,-50%);
+  z-index: 10;
+}
+#search{
+  display: none;
+  outline: none;
+  color: #555;
+  font-family: 'Cairo', sans-serif ;
+  font-size: 20px;
+  line-height: 1px;
+  z-index: 9;
+  padding: 10px 30px;
+  box-sizing: border-box;
+  border: none;
+  position: absolute;
+  border-radius: 40px;
+  background-color: white;
+  height: 8%;
+  width: 80%;
+  opacity: 0;
+  left: 50%;
+  top: 7%;
+  transform: translate(-50%,-50%);
+  z-index: 10;
+}
+@keyframes f {
+  0%{opacity: 0;}
+  80%{opacity: 0;}
+  100%{opacity: .6;}
+}
+@keyframes fx {
+  0%{opacity: .6;}
+  80%{opacity: .6;}
+  100%{opacity: 0;}
 }
 .chatbody{
   display: none;
@@ -399,12 +474,13 @@ body{
   color: white;
   border-radius: 50%;
   position: absolute;
-  height: 90px;
-  width: 90px;
-  left: 84%;
-  top: 90%;
-  transform: translate(-50%, -50%);
+  height: 70px;
+  width: 70px;
+  left: 99.5%;
+  top: 30%;
+  transform: translate(-100%, -100%);
   cursor: pointer;
+  transition: all .5s cubic-bezier(1,-0.01,0.26,0.99);
 }
 .plus{
   cursor: inherit;
@@ -415,14 +491,16 @@ body{
   position: absolute;
   height: 10px;
   width: 10px;
-  left: 34%;
+  left: 30%;
   top: 50%;
   transform: translate(-50%, -50%);
+  transition: all .5s cubic-bezier(1,-0.01,0.26,0.99);
 }
 #ch2{
-  display: none;
 }
 .messagerlogo{
+  z-index: 9;
+  cursor: pointer;
   text-align: center;
   border-bottom: solid gray;
   font-family: 'Lalezar', cursive;
@@ -444,4 +522,67 @@ body{
   overflow-y: auto;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
+  z-index: 9;
+}
+.scont{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+}
+.deletechat{
+  font-family: 'Lalezar', cursive;
+  position: relative;
+  display: none;
+  height: 60px;
+  width: 180px;
+  border: solid black;
+  z-index: 7;
+  border-radius: 15px;
+  background-color: #222;
+  color:white;
+  opacity: .5;
+  margin-bottom: 20px;
+  padding: 10px 20px;
+}
+.dchlist{
+  font-size: 30px;
+  list-style: none;
+  text-align: center;
+  cursor: pointer;
+  transition: all .4s;
+}
+.dchlist:hover{
+  background-color: #888;
+}
+#notfound{
+  color: #888;
+  text-align: center;
+  font-size: 40px;
+  font-family: 'Cairo', sans-serif ;
+  position: absolute;
+  height: 50%;
+  width: 59%;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, -50%);
+}
+#nobody{
+  font-size: 30px;
+}
+.searchfound{
+  padding: 12px 22px;
+  font-size: 30px;
+  list-style: none;
+  text-align: right;
+  cursor: pointer;
+  transition: all .4s;
+  z-index: 10;
+}
+.searchfound:hover{
+  background-color: #888;
+  border-radius: 25px;
 }
